--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -coverprofile cov.out -v ./...
+      run: go test -coverprofile cov.out -v ./internal/cmd/... ./internal/consts/... ./internal/generation/... ./internal/utils/... ./internal/parser
 
     - name: Coverage
       run: go tool cover -func cov.out
