--- a/.builder.yaml
+++ b/.builder.yaml
@@ -3,10 +3,11 @@ configs:
   name: Config
 - source: ./internal/cmd/ttypes_test.go
   name: testCase
+  # mode: DEFAULT (This is the default mode)
   destination: ./internal/cmd/ttypes_builder_test.go
 - source: ./examples/benchmark/benchmark.go
   name: Data
   mode: DEFAULT
 - source: ./examples/person.go
   name: Person
-  mode: FAST
+  mode: FAST # This mode is faster but may have errors
