--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,8 +24,5 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -coverprofile cov.out -v ./internal/cmd/... ./internal/consts/... ./internal/generation/... ./internal/utils/... ./internal/parser
-
-    - name: Coverage
-      run: go tool cover -func cov.out
+    - name: Test & Coverage
+      run: make coverage
