feat: write multiple builders to same file (#11)
* feat: initial commit

* fix: fix set bugs

* test: add tests for set

* test: add more test for strings

* test: add test for filter

* fix: fix filter

* feat: update functools

* test: add test for func tools

* chore: remove additional check

* test: add test for get parser mode

* fix: fix code generation

* test: add more test for write helper

* fix: fix merge import

* test: add test for merge import

* test: add package validation test

* chore: update makefile to include new packages

* fix: make results deterministic

* test: add new test for merge package

* test: add names to import test for non conflict

* fix: add nil filter

* test: add nil to test

* fix: fix multi writing

* test: add test for multi write

* fix: fix bugs and update tests

* ci: update ci to use make

* chore: add benchmark to ci

* feat: add multi struct in same file support to example

* test: fix test dir generation

* chore: refactor logger to make it easier to test

* test: add more tests

* tests: update tests for ttypes

* fix: combine single and multiconfig setup

--- a/.builder.yaml
+++ b/.builder.yaml
@@ -3,11 +3,14 @@ configs:
   name: Config
 - source: ./internal/cmd/ttypes_test.go
   name: testCase
-  # mode: DEFAULT (This is the default mode)
+  mode: DEFAULT # This is the default mode
   destination: ./internal/cmd/ttypes_builder_test.go
 - source: ./examples/benchmark/benchmark.go
   name: Data
   mode: DEFAULT
 - source: ./examples/person.go
   name: Person
+  mode: FAST # This mode is faster but may have errors
+- source: ./examples/person.go
+  name: UnRelated
   mode: FAST # This mode is faster but may have errors
